# resumegenerator

./: main.py  pyproject.toml
resumegenerator/: __init__.py  controller.py  experience.py  scrapy_service.py
