[tool.poetry]
name = "resumegenerator"
version = "0.1.0"
description = "A simple generator for my resumes applications using selenium and chatgpt"
authors = ["Victor Raton"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
selenium = "^4.8.2"
black = "^23.1.0"
isort = "^5.12.0"
webdriver-manager = "^3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
